--- a/common/pom.xml
+++ b/common/pom.xml
@@ -16,11 +16,21 @@
     <version>1.0-SNAPSHOT</version>
     <name>common</name>
     <url>https://github.com/zhangkaitao/es/common</url>
+    
+    <dependencies>
+    		<dependency>
+             <groupId>mysql</groupId>
+             <artifactId>mysql-connector-java</artifactId>
+             <version>${mysql.version}</version>
+         </dependency>
+    </dependencies>
 
 
     <properties>
         <support.basedir>${project.parent.parent.basedir}/src/support</support.basedir>
         <site.basedir>${project.parent.parent.basedir}</site.basedir>
+        
+        <mysql.version>5.1.27</mysql.version>
     </properties>
 
 
